Fixess some ui styles for dark mode

--- a/styles/base/_common.scss
+++ b/styles/base/_common.scss
@@ -126,4 +126,8 @@
             }
         }
     }
+
+    .currencyIc {
+        border-color: lighten($BorderLight, 5%);
+    }
 }
